syntax = "proto3";
package mex.v0;

option go_package = "github.com/d4l-data4life/mex/mex/shared/fields;fields";

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/any.proto";


message IndexDef {
  bool multi_valued                = 1;

  repeated google.protobuf.Any ext = 7;
}

message FieldDef {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: "{\"name\":\"price\",\"kind\":\"number\",\"indexDef\":{\"multiValued\":true}}"
  };

  string   name       = 1;
  string   kind       = 2;
  string   display_id = 3;
  IndexDef index_def  = 4;
}

message FieldDefList {
  repeated FieldDef field_defs = 1;
}

message IndexDefExtHierarchy {
  string code_system_name_or_node_entity_type = 1;

  string link_field_name    = 4;
  string display_field_name = 5;
}

message IndexDefExtLink {
  string relation_type                 = 1;
  repeated string linked_target_fields = 4;
}

message IndexDefExtCoding {
  repeated string codingset_names = 1;
}
